@@ -72,7 +72,10 @@ public class RelCopyOnWriteVisitorTest extends PlanTestBase {
   private Plan buildPlanFromQuery(String query) throws IOException, SqlParseException {
     SqlToSubstrait s = new SqlToSubstrait();
     String[] values = asString("tpch/schema.sql").split(";");
-    var creates = Arrays.stream(values).filter(t -> !t.trim().isBlank()).toList();
+    var creates =
+        Arrays.stream(values)
+            .filter(t -> !t.trim().isBlank())
+            .collect(java.util.stream.Collectors.toList());
     io.substrait.proto.Plan protoPlan1 = s.execute(query, creates);
     return new ProtoPlanConverter().from(protoPlan1);
   }
@@ -133,7 +136,10 @@ public class RelCopyOnWriteVisitorTest extends PlanTestBase {
     // convert newPlan back to sql
     var pojoRel = newPlan.getRoots().get(0).getInput();
     String[] values = asString("tpch/schema.sql").split(";");
-    var creates = Arrays.stream(values).filter(t -> !t.trim().isBlank()).toList();
+    var creates =
+        Arrays.stream(values)
+            .filter(t -> !t.trim().isBlank())
+            .collect(java.util.stream.Collectors.toList());
     RelNode relnodeRoot = new SubstraitToSql().substraitRelToCalciteRel(pojoRel, creates);
     String newSql = SubstraitToSql.toSql(relnodeRoot);
     assertTrue(newSql.toUpperCase().contains("APPROX_COUNT_DISTINCT"));
